# advanced-rag-llm-app

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: __init__.py
backend/app/: __init__.py  api.py  comparison.py  embeddings.py  evaluation.py  llm.py  models.py  rag.py  retrieval.py  settings.py  store.py  text_processing.py
deliverables/: advanced_rag_llm_complete_technical_guide.docx  advanced_rag_llm_internship_presentation.pptx  advanced_rag_llm_internship_presentation.pptx.inspect.ndjson  advanced_rag_llm_internship_report.docx  internship_report_7week.docx  internship_report_7week.md  internship_report_final.docx  internship_report_final.md
docs/: PROJECT_DEEP_DIVE.md  architecture.md  complete_project_guide.md  evaluation.md  final_report.md  project_report_outline.md
evals/: comparison_results.json  comparison_results_sbert.json  results.json  results_sbert.json  sample_questions.jsonl
frontend/: app.js  index.html  style.css
sample_docs/: archived_2025_faq.txt  compute_and_lab_access.txt  eligibility_and_selection.txt  internship_handbook.txt  mentoring_and_communication.txt  milestones_and_assessment.txt  publication_ip_and_open_source.txt  rag_architecture_and_evaluation.txt  rag_background.txt  research_ethics_and_data_governance.txt  security_and_external_llm_use.txt  stipend_and_expenses.txt  work_schedule_and_leave.txt
scripts/: browser_smoke.py  build_complete_project_guide.py  build_report.py
tests/: test_core.py  test_evaluation_comparison.py  test_openai_provider.py
