[project]
name = "advanced-rag-llm-app"
version = "0.1.0"
description = "Summer internship project: advanced RAG application with LLM API integrations, citations, and evaluation."
requires-python = ">=3.9"
authors = [{ name = "Internship Project" }]
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "openai>=1.66",
]

[project.optional-dependencies]
llm = [
    "openai>=1.66",
]
pdf = [
    "pypdf>=4.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
